# reel-to-comment

./: .gitignore  GEMINI.md  README.md  index.html  package-lock.json  package.json  tsconfig.json
.github/workflows/: release.yml
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: captions.rs  comments.rs  error.rs  main.rs  secure_storage.rs  telegram.rs
src/components/: CommentCard.css  CommentCard.tsx  FeedbackBar.css  FeedbackBar.tsx  SettingsModal.css  SettingsModal.tsx  StatusBar.css  StatusBar.tsx
src/hooks/: useTauri.ts
src/store/: useAppStore.ts
