[package]
name = "reel-comment"
version = "0.1.0"
description = "Instagram Reel Comment Generator"
authors = ["Octavio Lara"]
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = ["shell-sidecar", "http-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls", "multipart"] }
tempfile = "3.10"
regex = "1.10"
aes-gcm = "0.10"
base64 = "0.22"
keyring = "2.3"
which = "6.0"
thiserror = "1.0"
getrandom = "0.2"

[features]
# default enables sampling-all-features
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
